--- a/sensor/mqtt.yaml
+++ b/sensor/mqtt.yaml
@@ -107,35 +107,35 @@
   name: sonoff_maddox_version
   state_topic: "sonoff-version"
 
-# - platform: mqtt
-#   name: yuccaelephantipes_moisture
-#   state_topic: "miflora/YuccaElephantipes"
-#   value_template: "{{ value_json.moisture }}"
-#   unit_of_measurement: "%"
+- platform: mqtt
+  name: yuccaelephantipes_moisture
+  state_topic: "miflora/YuccaElephantipes"
+  value_template: "{{ value_json.moisture }}"
+  unit_of_measurement: "%"
 
-# - platform: mqtt
-#   name: yuccaelephantipes_light
-#   state_topic: "miflora/YuccaElephantipes"
-#   value_template: "{{ value_json.light }}"
-#   unit_of_measurement: "lux"
+- platform: mqtt
+  name: yuccaelephantipes_light
+  state_topic: "miflora/YuccaElephantipes"
+  value_template: "{{ value_json.light }}"
+  unit_of_measurement: "lux"
 
-# - platform: mqtt
-#   name: yuccaelephantipes_temperature
-#   state_topic: "miflora/YuccaElephantipes"
-#   value_template: "{{ value_json.temperature }}"
-#   unit_of_measurement: "°C"
+- platform: mqtt
+  name: yuccaelephantipes_temperature
+  state_topic: "miflora/YuccaElephantipes"
+  value_template: "{{ value_json.temperature }}"
+  unit_of_measurement: "°C"
 
-# - platform: mqtt
-#   name: yuccaelephantipes_conductivity
-#   state_topic: "miflora/YuccaElephantipes"
-#   value_template: "{{ value_json.conductivity }}"
-#   unit_of_measurement: "µS/cm"
+- platform: mqtt
+  name: yuccaelephantipes_conductivity
+  state_topic: "miflora/YuccaElephantipes"
+  value_template: "{{ value_json.conductivity }}"
+  unit_of_measurement: "µS/cm"
 
-# - platform: mqtt
-#   name: yuccaelephantipes_battery
-#   state_topic: "miflora/YuccaElephantipes"
-#   value_template: "{{ value_json.battery }}"
-#   unit_of_measurement: "%"
+- platform: mqtt
+  name: yuccaelephantipes_battery
+  state_topic: "miflora/YuccaElephantipes"
+  value_template: "{{ value_json.battery }}"
+  unit_of_measurement: "%"
 
 - platform: mqtt
   name: HoweaForsteriana_moisture
