--- a/configuration.yaml
+++ b/configuration.yaml
@@ -64,7 +64,7 @@ input_boolean: !include input_boolean.yaml
 input_datetime: !include input_datetime.yaml
 input_number: !include input_number.yaml
 input_select: !include input_select.yaml
-ios: !include ios.yaml
+#ios: !include ios.yaml
 media_player: !include media_player.yaml
 notify: !include notify.yaml
 plant: !include plant.yaml
