--- a/automation/system_automations.yaml
+++ b/automation/system_automations.yaml
@@ -109,3 +109,14 @@
     data:
       topic: sonoff_3463/cmnd/Status
       payload: '0'
+
+- alias: HACS update notifications
+  id: '1561215168000'
+  trigger:
+    platform: numeric_state
+    entity_id: sensor.hacs
+    above: 5
+  action:
+    service: !secret notify_ios
+    data_template:
+      message: 'Custom component updates available: {{ states.sensor.hacs.state }}.'
