--- a/plant.yaml
+++ b/plant.yaml
@@ -12,8 +12,8 @@ Howea Forsteriana:
   max_conductivity: 2000
   min_temperature: 8
   max_temperature: 32
-  min_brightness: 1500
-  max_brightness: 25000
+  # min_brightness: 1500
+  # max_brightness: 25000
 
 Yucca Elephantipes:
   sensors:
@@ -29,5 +29,5 @@ Yucca Elephantipes:
   max_conductivity: 2000
   min_temperature: 8
   max_temperature: 32
-  min_brightness: 1500
-  max_brightness: 20000
+  # min_brightness: 1500
+  # max_brightness: 20000
