--- a/automation/light_automations.yaml
+++ b/automation/light_automations.yaml
@@ -37,9 +37,12 @@
   action:
     service: light.turn_on
     entity_id: light.deckenspots
-    data:
-      entity_id: light.deckenspots
-      effect: random
+    data_template:
+      # entity_id: light.deckenspots
+      # effect: random
+      hs_color:
+        - "{{ range(360)|random }}"
+        - "{{ range(80,101)|random }}"
       transition: 5
       brightness: 255
 
@@ -55,9 +58,13 @@
     state: 'on'
   action:
     service: light.turn_on
-    data:
-      entity_id: light.stehlampe
-      effect: random
+    entity_id: light.stehlampe
+    data_template:
+      # entity_id: light.stehlampe
+      # effect: random
+      hs_color:
+        - "{{ range(360)|random }}"
+        - "{{ range(80,101)|random }}"
       transition: 5
       brightness: 132
 
